--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,28 +8,78 @@
         <link rel="stylesheet" href="css/bootstrap.css" />
     </head>
     <body>
-        <div class="container-fluid">
-            <h1 id="demo">Marhabaaa ya <%= aVariable %></h1>
-            <button class="btn btn-dark">Hello</button>
-
-            <header class="pb-3 mb-5 border-bottom">
-                <h1 class="h4">
-                    <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-inline-block mr-2" viewBox="0 0 118 94" role="img">
-                            <path
-                                fill-rule="evenodd"
-                                clip-rule="evenodd"
-                                d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-                                fill="currentColor"
-                            ></path>
-                        </svg>
-                        <span>npm starter</span>
-                    </a>
-                </h1>
-            </header>
+        <div class="card border">
+            <h1 id="demo">Weather App</h1>
+            <div class="card-body">
+                <div class="container">
+                    <ul class="nav nav-tabs nav-fill">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><%= dayOne %></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><%= dayTwo %></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><%= dayThree %></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><%= dayFour %></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><%= dayFive %></a>
+                        </li>
+                    </ul>
+                    <div class="row text-center">
+                        <!-- <div class="col border-primary border border-2 rounded">col</div>
+                        <div class="col border rounded">col</div>
+                        <div class="col border rounded">col</div>
+                        <div class="col border rounded">col</div>
+                        <div class="col border rounded">col</div>
+                        <div class="col border rounded">col</div>
+                        <div class="col border rounded">col</div>
+                        <div class="col border rounded">col</div> -->
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="h-50 w-100" style="background-color: gray"></div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="h-50 w-100" style="background-color: gray"></div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="h-50 w-100" style="background-color: gray"></div>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                    <form class="row card-footer" action="/by-city" method="post">
+                        <div class="col-auto">
+                            <label for="city" class="form-label">Search by city:</label>
+                        </div>
+                        <div class="col-auto">
+                            <input class="form-control" type="text" name="city" id="city" />
+                        </div>
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-primary">Enter your city</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script src="/js/getLocation.js"></script>
+        <script src="/js/script.js"></script>
         <script type="module" src="js/bootstrap.js"></script>
     </body>
 </html>
