--- a/client/src/components/weatherbody/weatherbody.css
+++ b/client/src/components/weatherbody/weatherbody.css
@@ -1,20 +1,25 @@
 .weather-body {
     background: linear-gradient(0.6turn, var(--light-sea-green), var(--dark-slate-gray), var(--gunmetal));
     border-radius: 20px;
-    display: grid;
-    grid-template-columns: [col1-start] 1fr [col1-end col2-start] 1fr [col2-end col3-start] 1fr [col3-end col4-start] 1fr [col4-end];
-    grid-template-rows: [row1-start] 1fr [row1-end row2-start] 1fr [row2-end row3-start] 5vh [row3-end row4-start] 5vh [row4-end row5-start] 5vh [row5-end row6-start] 5vh [row6-end];
     max-height: 0;
     overflow: hidden;
     padding: 0;
-    transition: max-height 0.2s;
+    transition: max-height 0.1s;
     grid-column: 1 / 4;
 }
 
-.weather-body > * {
+.weather-body-content {
+    display: grid;
+    grid-template-columns: [col1-start] 1fr [col1-end col2-start] 1fr [col2-end col3-start] 1fr [col3-end col4-start] 1fr [col4-end];
+    grid-template-rows: [row1-start] 1fr [row1-end row2-start] 1fr [row2-end row3-start] 5vh [row3-end row4-start] 5vh [row4-end row5-start] 5vh [row5-end row6-start] 5vh [row6-end];
+}
+
+.weather-body-content > * {
+    overflow-wrap: break-word;
     align-self: end;
     padding: 10px;
     border-left: 5px teal solid;
+    font-size: 14px;
 }
 
 .title {
@@ -39,4 +44,36 @@
 
 .sky-description {
     align-self: center;
+}
+
+.active {
+    max-height: 100%;
+    padding: 10vw;
+    margin-top: 10px;
+}
+
+@media (max-width: 650px) {
+    .weather-body-content {
+        grid-column: 1 / 3;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding: 10px;
+    }
+
+    .special {
+        grid-column: -3 / -1;
+    }
+}
+
+@media (min-width: 1200px) {
+    #day {
+        grid-column: 1 / 4;
+    }
+
+    .weather-body-content {
+        grid-column: 2 / 5;
+    }
+
+    .special {
+        grid-column: -3 / -1;
+    }
 }
